2009-06-11  Andy Buckley  <andy@insectnation.org>

	* Adding --disable-pdfmanual option, to make the bootstrap a bit
	more robust.

	* Re-enabling D0IL in FastJets: adding 10^-10 to the pTmin removes
	the numerical instability!

	* Fixing CDF_2004 min/max cone analysis to use calo jets for the
	leading jet Et binning. Thanks to Markus Warsinsky
	for (re)discovering this bug: I was sure it had been fixed. I'm
	optimistic that this will fix the main distributions, although
	Swiss Cheese "minus 3" is still likely to be broken. Early tests
	look okay, but it'll take more stats before we can remove the "do
	not trust" sign.

2009-06-10  Andy Buckley  <andy@insectnation.org>

	* Providing "calc" methods so that Thrust and Sphericity
	projections can be used as calculators without having to use the
	projecting/caching system.

2009-06-09  Andy Buckley  <andy@insectnation.org>

	* 1.1.3 release!

	* More doc building and SWIG robustness tweaks.

2009-06-07  Andy Buckley  <andy@insectnation.org>

	* Make doc build from metadata work even before the library is
	installed.

2009-06-07  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Fix phi rotation in CDF_2008_LEADINGJETS.

2009-06-07  Andy Buckley  <andy@insectnation.org>

	* Disabling D0 IL midpoint cone (using CDF modpoint instead),
	since there seems to be a crashing bug in FastJet's
	implementation: we can't release that way, since ~no D0 analyses
	will run.

2009-06-03  Andy Buckley  <andy@insectnation.org>

	* Putting SWIG-generated source files under SVN control to make
	life easier for people who we advise to check out the SVN head
	version, but who don't have a sufficiently modern copy of SWIG to

	* Adding the --disable-analyses option, for people who just want
	to use Rivet as a framework for their own analyses.

	* Enabling HepMC cross-section reading, now that HepMC 2.5.0 has
	been released.

2009-05-23  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Using gsl-config to locate libgsl
